--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
 <nav class="light-blue lighten-4" role="navigation">
   <div class="nav-wrapper container">
-    <a id="logo-container" href="#" class="brand-logo"><img src="@routes.Assets.versioned("images/logo.phg")"></img></a>
+    <a id="logo-container" href="#" class="brand-logo"><img src="@routes.Assets.versioned("images/logo.png")"></img></a>
     <ul class="right hide-on-med-and-down">
       <li>
         <a class="light-blue-text text-darken-3" href="/login">twitterでログイン</a>
